deploy: ceae771acd6b705197b452b16838901f33773209

--- a/en/informations/description.html
+++ b/en/informations/description.html
@@ -22,7 +22,7 @@ ul.task-list li input[type="checkbox"] {
 }
 </style>
 <script src="../site_libs/quarto-nav/quarto-nav.js"></script><script src="../site_libs/clipboard/clipboard.min.js"></script><script src="../site_libs/quarto-search/autocomplete.umd.js"></script><script src="../site_libs/quarto-search/fuse.min.js"></script><script src="../site_libs/quarto-search/quarto-search.js"></script><meta name="quarto:offset" content="../">
-<link href="../informations/evaluations.html" rel="next">
+<link href="../informations/schedule.html" rel="next">
 <link href="../informations/general.html" rel="prev">
 <script src="../site_libs/quarto-html/quarto.js" type="module"></script><script src="../site_libs/quarto-html/tabsets/tabsets.js" type="module"></script><script src="../site_libs/quarto-html/popper.min.js"></script><script src="../site_libs/quarto-html/tippy.umd.min.js"></script><script src="../site_libs/quarto-html/anchor.min.js"></script><link href="../site_libs/quarto-html/tippy.css" rel="stylesheet">
 <link href="../site_libs/quarto-html/quarto-syntax-highlighting-0815c480559380816a4d1ea211a47e91.css" rel="stylesheet" class="quarto-color-scheme" id="quarto-text-highlighting-styles">
@@ -281,8 +281,20 @@ ul.task-list li input[type="checkbox"] {
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
+  <a href="../informations/schedule.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Plan</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
   <a href="../informations/evaluations.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">Evaluations</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../informations/materials.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Matériel</span></a>
   </div>
 </li>
       </ul>
@@ -978,8 +990,8 @@ window.onload = function() {
       </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="../informations/evaluations.html" class="pagination-link" aria-label="Evaluations">
-        <span class="nav-page-text">Evaluations</span> <i class="bi bi-arrow-right-short"></i>
+      <a href="../informations/schedule.html" class="pagination-link" aria-label="Plan">
+        <span class="nav-page-text">Plan</span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
