--- a/en/informations/evaluations.html
+++ b/en/informations/evaluations.html
@@ -22,8 +22,8 @@ ul.task-list li input[type="checkbox"] {
 }
 </style>
 <script src="../site_libs/quarto-nav/quarto-nav.js"></script><script src="../site_libs/clipboard/clipboard.min.js"></script><script src="../site_libs/quarto-search/autocomplete.umd.js"></script><script src="../site_libs/quarto-search/fuse.min.js"></script><script src="../site_libs/quarto-search/quarto-search.js"></script><meta name="quarto:offset" content="../">
-<link href="../contents/01-introduction.html" rel="next">
-<link href="../informations/description.html" rel="prev">
+<link href="../informations/materials.html" rel="next">
+<link href="../informations/schedule.html" rel="prev">
 <script src="../site_libs/quarto-html/quarto.js" type="module"></script><script src="../site_libs/quarto-html/tabsets/tabsets.js" type="module"></script><script src="../site_libs/quarto-html/popper.min.js"></script><script src="../site_libs/quarto-html/tippy.umd.min.js"></script><script src="../site_libs/quarto-html/anchor.min.js"></script><link href="../site_libs/quarto-html/tippy.css" rel="stylesheet">
 <link href="../site_libs/quarto-html/quarto-syntax-highlighting-0815c480559380816a4d1ea211a47e91.css" rel="stylesheet" class="quarto-color-scheme" id="quarto-text-highlighting-styles">
 <link href="../site_libs/quarto-html/quarto-syntax-highlighting-dark-748b535e376f14d4692bf2b2e5fd6380.css" rel="stylesheet" class="quarto-color-scheme quarto-color-alternate" id="quarto-text-highlighting-styles">
@@ -281,8 +281,20 @@ ul.task-list li input[type="checkbox"] {
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
+  <a href="../informations/schedule.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Plan</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
   <a href="../informations/evaluations.html" class="sidebar-item-text sidebar-link active">
  <span class="menu-text">Evaluations</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../informations/materials.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Matériel</span></a>
   </div>
 </li>
       </ul>
@@ -973,13 +985,13 @@ window.onload = function() {
     }
   });
   </script><nav class="page-navigation"><div class="nav-page nav-page-previous">
-      <a href="../informations/description.html" class="pagination-link" aria-label="Description">
-        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text">Description</span>
+      <a href="../informations/schedule.html" class="pagination-link" aria-label="Plan">
+        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text">Plan</span>
       </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="../contents/01-introduction.html" class="pagination-link" aria-label="01 - Introduction">
-        <span class="nav-page-text">01 - Introduction</span> <i class="bi bi-arrow-right-short"></i>
+      <a href="../informations/materials.html" class="pagination-link" aria-label="Matériel">
+        <span class="nav-page-text">Matériel</span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
