--- a/en/informations/general.html
+++ b/en/informations/general.html
@@ -281,8 +281,20 @@ ul.task-list li input[type="checkbox"] {
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
+  <a href="../informations/schedule.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Plan</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
   <a href="../informations/evaluations.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">Evaluations</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../informations/materials.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Matériel</span></a>
   </div>
 </li>
       </ul>
