--- a/informations/description.html
+++ b/informations/description.html
@@ -22,7 +22,7 @@ ul.task-list li input[type="checkbox"] {
 }
 </style>
 <script src="../site_libs/quarto-nav/quarto-nav.js"></script><script src="../site_libs/clipboard/clipboard.min.js"></script><script src="../site_libs/quarto-search/autocomplete.umd.js"></script><script src="../site_libs/quarto-search/fuse.min.js"></script><script src="../site_libs/quarto-search/quarto-search.js"></script><meta name="quarto:offset" content="../">
-<link href="../informations/evaluations.html" rel="next">
+<link href="../informations/schedule.html" rel="next">
 <link href="../informations/general.html" rel="prev">
 <script src="../site_libs/quarto-html/quarto.js" type="module"></script><script src="../site_libs/quarto-html/tabsets/tabsets.js" type="module"></script><script src="../site_libs/quarto-html/popper.min.js"></script><script src="../site_libs/quarto-html/tippy.umd.min.js"></script><script src="../site_libs/quarto-html/anchor.min.js"></script><link href="../site_libs/quarto-html/tippy.css" rel="stylesheet">
 <link href="../site_libs/quarto-html/quarto-syntax-highlighting-0815c480559380816a4d1ea211a47e91.css" rel="stylesheet" class="quarto-color-scheme" id="quarto-text-highlighting-styles">
@@ -282,8 +282,20 @@ ul.task-list li input[type="checkbox"] {
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
+  <a href="../informations/schedule.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Plan</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
   <a href="../informations/evaluations.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">Evaluations</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../informations/materials.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Matériel</span></a>
   </div>
 </li>
       </ul>
@@ -365,17 +377,15 @@ ul.task-list li input[type="checkbox"] {
 <p>À la fin du cours, l’étudiant ou l’étudiante devra être capable :</p>
 <ul>
 <li>de comprendre et décrire succinctement les fondements théoriques des méthodes d’analyse de données étudiées;</li>
-<li>d’identifier correctement les situations où l’emploi de ces méthodes est indiqué ;</li>
-<li>d’utiliser efficacement un logiciel tel SAS ou R pour mettre en oeuvre ces méthodes ;</li>
-<li>d’analyser et d’interpréter judicieusement les résultats découlant de l’analyse ;</li>
+<li>d’identifier correctement les situations où l’emploi de ces méthodes est indiqué;</li>
+<li>d’utiliser efficacement un logiciel tel SAS ou R pour mettre en oeuvre ces méthodes;</li>
+<li>d’analyser et d’interpréter judicieusement les résultats découlant de l’analyse;</li>
 <li>de formuler par écrit les conclusions de l’analyse, dans le respect des limites de la méthodologie.</li>
 </ul></section><section id="équipement-informatique" class="level2"><h2 class="anchored" data-anchor-id="équipement-informatique">Équipement informatique</h2>
-<p>Vous pourriez avoir besoin d’un ordinateur, de haut-parleurs ou d’un casque d’écoute, d’un microphone, d’une webcam et d’une connexion Internet avec fil à large bande ou sans fil. Pour vérifier les paramètres de configuration minimaux selon le système d’exploitation, nous vous invitons à visiter cette page https://www.ulaval.ca/etudiants-actuels/equipez-vous-pour-reussir</p>
+<p>Vous pourriez avoir besoin d’un ordinateur, de haut-parleurs ou d’un casque d’écoute, d’un microphone, d’une webcam et d’une connexion Internet avec fil à large bande ou sans fil. Pour vérifier les paramètres de configuration minimaux selon le système d’exploitation, nous vous invitons à visiter cette <a href="https://www.ulaval.ca/etudiants-actuels/equipez-vous-pour-reussir">page</a>.</p>
 <p>De plus, ce cours peut nécessiter des besoins logiciels particuliers qui seront alors décrits dans d’autres sections du plan de cours, le cas échéant.</p>
 </section><section id="fonctionnement" class="level2"><h2 class="anchored" data-anchor-id="fonctionnement">Fonctionnement</h2>
 <p>Les cours et examen auront lieu en présentiel les mardi et vendredi matin, mais une portion du matériel sera disponible en ligne. De façon générale, la séance du vendredi sera une séance magistrale et la séance du mardi sera dédiée à des exercices pratiques réalisés de façon autonome par les étudiants avec le soutien de l’enseignant.</p>
-<p>Le portail des cours pour les évaluations</p>
-<p>Les évaluations se feront sur le portail des cours dans la section Liste des évaluations. Les questionnaires hebdomadaires sont dans la section Questionnaires (voir l’onglet dans la section Outils à gauche). Vos travaux seront déposés dans la boîte de dépôt du portail. Vos résultats seront consignés dans la section Sommaire des résultats.</p>
 </section><section id="approches-pédagogiques" class="level2"><h2 class="anchored" data-anchor-id="approches-pédagogiques">Approches pédagogiques</h2>
 <p>L’approche pédagogique privilégiée est l’exposé interactif (vendredi) en alternance avec des périodes de laboratoires (mardi). L’approche pédagogique est très axée sur l’apprentissage actif et exige un engagement soutenu des étudiants tout au long de la session.</p>
 
@@ -1007,8 +1017,8 @@ window.onload = function() {
       </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="../informations/evaluations.html" class="pagination-link" aria-label="Evaluations">
-        <span class="nav-page-text">Evaluations</span> <i class="bi bi-arrow-right-short"></i>
+      <a href="../informations/schedule.html" class="pagination-link" aria-label="Plan">
+        <span class="nav-page-text">Plan</span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
