--- a/informations/evaluations.html
+++ b/informations/evaluations.html
@@ -22,8 +22,8 @@ ul.task-list li input[type="checkbox"] {
 }
 </style>
 <script src="../site_libs/quarto-nav/quarto-nav.js"></script><script src="../site_libs/clipboard/clipboard.min.js"></script><script src="../site_libs/quarto-search/autocomplete.umd.js"></script><script src="../site_libs/quarto-search/fuse.min.js"></script><script src="../site_libs/quarto-search/quarto-search.js"></script><meta name="quarto:offset" content="../">
-<link href="../contents/01-introduction.html" rel="next">
-<link href="../informations/description.html" rel="prev">
+<link href="../informations/materials.html" rel="next">
+<link href="../informations/schedule.html" rel="prev">
 <script src="../site_libs/quarto-html/quarto.js" type="module"></script><script src="../site_libs/quarto-html/tabsets/tabsets.js" type="module"></script><script src="../site_libs/quarto-html/popper.min.js"></script><script src="../site_libs/quarto-html/tippy.umd.min.js"></script><script src="../site_libs/quarto-html/anchor.min.js"></script><link href="../site_libs/quarto-html/tippy.css" rel="stylesheet">
 <link href="../site_libs/quarto-html/quarto-syntax-highlighting-0815c480559380816a4d1ea211a47e91.css" rel="stylesheet" class="quarto-color-scheme" id="quarto-text-highlighting-styles">
 <link href="../site_libs/quarto-html/quarto-syntax-highlighting-dark-748b535e376f14d4692bf2b2e5fd6380.css" rel="stylesheet" class="quarto-color-scheme quarto-color-alternate" id="quarto-text-highlighting-styles">
@@ -282,8 +282,20 @@ ul.task-list li input[type="checkbox"] {
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
+  <a href="../informations/schedule.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Plan</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
   <a href="../informations/evaluations.html" class="sidebar-item-text sidebar-link active">
  <span class="menu-text">Evaluations</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../informations/materials.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Matériel</span></a>
   </div>
 </li>
       </ul>
@@ -332,7 +344,7 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#d%C3%A9tails-sur-les-modalit%C3%A9s-d%C3%A9valuation" id="toc-détails-sur-les-modalités-dévaluation" class="nav-link" data-scroll-target="#détails-sur-les-modalités-dévaluation">Détails sur les modalités d’évaluation</a></li>
   <li><a href="#absence-%C3%A0-une-activit%C3%A9-obligatoire" id="toc-absence-à-une-activité-obligatoire" class="nav-link" data-scroll-target="#absence-à-une-activité-obligatoire">Absence à une activité obligatoire</a></li>
   <li><a href="#politique-sur-lutilisation-dappareils-%C3%A9lectroniques" id="toc-politique-sur-lutilisation-dappareils-électroniques" class="nav-link" data-scroll-target="#politique-sur-lutilisation-dappareils-électroniques">Politique sur l’utilisation d’appareils électroniques</a></li>
-  <li><a href="#politique-sur-le-plagiat-et-la-fraude-acad%C3%A9mique" id="toc-politique-sur-le-plagiat-et-la-fraude-académique" class="nav-link" data-scroll-target="#politique-sur-le-plagiat-et-la-fraude-académique">POlitique sur le plagiat et la fraude académique</a></li>
+  <li><a href="#politique-sur-le-plagiat-et-la-fraude-acad%C3%A9mique" id="toc-politique-sur-le-plagiat-et-la-fraude-académique" class="nav-link" data-scroll-target="#politique-sur-le-plagiat-et-la-fraude-académique">Politique sur le plagiat et la fraude académique</a></li>
   <li><a href="#%C3%A9tudiants-ayant-une-situation-de-handicap-li%C3%A9e-%C3%A0-une-limitation-fonctionnelle" id="toc-étudiants-ayant-une-situation-de-handicap-liée-à-une-limitation-fonctionnelle" class="nav-link" data-scroll-target="#étudiants-ayant-une-situation-de-handicap-liée-à-une-limitation-fonctionnelle">Étudiants ayant une situation de handicap liée à une limitation fonctionnelle</a></li>
   </ul>
 <div class="toc-actions"><ul>
@@ -341,7 +353,7 @@ ul.task-list li input[type="checkbox"] {
 </ul></div>
 <div class="quarto-alternate-formats">
 <h2>Autres formats</h2>
-<ul><li><a href="evaluations.tex"><i class="bi bi-file"></i>LaTeX</a></li></ul>
+<ul><li><a href="evaluations.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li></ul>
 </div></nav>
 </div>
 <!-- main -->
@@ -489,7 +501,7 @@ Identification. Lors d’un examen, une carte d’identité avec photo admissibl
 </table></section><section id="détails-sur-les-modalités-dévaluation" class="level2"><h2 class="anchored" data-anchor-id="détails-sur-les-modalités-dévaluation">Détails sur les modalités d’évaluation</h2>
 <p>Conformément à la politique du Département de mathématiques et de statistique en matière d’amélioration et de consolidation de la connaissance du français, la qualité de l’écrit sera sanctionnée dans tous les travaux et examens. Un maximum de 10% des points pourra être enlevé pour la qualité de la langue et de la rédaction.</p>
 <p>Aucun retard n’est accepté pour la remise des travaux.</p>
-<p>Toute reprise d’évaluation accordée par la politique de reprise d’évaluation du Département aura lieu lors des dates de reprises officielles de la faculté.</p>
+<p>Toute reprise d’évaluation accordée par la politique de reprise d’évaluation du Département aura lieu lors des dates de reprises officielles de la faculté. Pour toute demande de révision de note, vous devez suivre la procédure du chapitre 4 du Réglement des études. Vous trouverez un formulaire à remplir à l’adresse suivante: <a href="https://www.fsg.ulaval.ca/departements/departement-de-mathematiques-et-de-statistique/etudier/reglements-et-documents-officiels-en-mathematiques-et-statistique">lien</a>.</p>
 </section><section id="absence-à-une-activité-obligatoire" class="level2"><h2 class="anchored" data-anchor-id="absence-à-une-activité-obligatoire">Absence à une activité obligatoire</h2>
 <p>Ces modalités s’appliquent en vertu des articles 4.41 et 4.42 du Réglement des études de l’Université Laval:</p>
 <ul>
@@ -512,8 +524,24 @@ Identification. Lors d’un examen, une carte d’identité avec photo admissibl
 <p>Dans certains cas, la ou le responsable du cours pourrait adopter une procédure simplifiée de gestion des demandes de reprises d’évaluation, tout en respectant les critères décrits dans cette politique. Dans ces cas, des explications particulières seront données à cet effet dans le plan de cours et présentées lors de la première séance.</p>
 </section><section id="politique-sur-lutilisation-dappareils-électroniques" class="level2"><h2 class="anchored" data-anchor-id="politique-sur-lutilisation-dappareils-électroniques">Politique sur l’utilisation d’appareils électroniques</h2>
 <p>La politique sur l’ utilisation d’appareils électroniques de la Faculté des Sciences et de Génie peut être consultée à l’ adresse: <a href="https://www.fsg.ulaval.ca/fileadmin/site_facultaire/Espace_facultaire/%C3%89tudiants/Politiques_facultaires/_Calculatrices-autoris%C3%A9es-FSG_20250221.pdf">lien</a>.</p>
-</section><section id="politique-sur-le-plagiat-et-la-fraude-académique" class="level2"><h2 class="anchored" data-anchor-id="politique-sur-le-plagiat-et-la-fraude-académique">POlitique sur le plagiat et la fraude académique</h2>
+</section><section id="politique-sur-le-plagiat-et-la-fraude-académique" class="level2"><h2 class="anchored" data-anchor-id="politique-sur-le-plagiat-et-la-fraude-académique">Politique sur le plagiat et la fraude académique</h2>
+<p><strong>Règles disciplinaires</strong></p>
+<p>Tout étudiant qui commet une infraction au Règlement disciplinaire à l’intention des étudiants de l’Université Laval dans le cadre du présent cours, notamment en matière de plagiat, est passible des sanctions qui sont prévues dans ce règlement. Il est très important pour tout étudiant de prendre connaissance des articles 23 à 46 du Règlement disciplinaire. Celui-ci peut être consulté à l’adresse suivante: <a href="https://www.ulaval.ca/sites/default/files/notre-universite/direction-gouv/Documents_officiels/Reglements/Reglement_disciplinaire_intention_etudiants.pdf">lien</a>.</p>
+<p><strong>Plagiat</strong></p>
+<p>Tout étudiant est tenu de respecter les règles relatives au plagiat. Constitue notamment du plagiat le fait de:</p>
+<ol type="i">
+<li><p>copier textuellement un ou plusieurs passages provenant d’un ouvrage sous format papier ou électronique sans mettre ces passages entre guillemets et sans en mentionner la source;</p></li>
+<li><p>résumer l’idée originale d’un auteur en l’exprimant dans ses propres mots (paraphraser) sans en mentionner la source;</p></li>
+<li><p>traduire partiellement ou totalement un texte sans en mentionner la provenance;</p></li>
+<li><p>remettre un travail copié d’un autre étudiant (avec ou sans l’accord de cet autre étudiant);</p></li>
+<li><p>remettre un travail téléchargé d’un site d’achat ou d’échange de travaux scolaires.</p></li>
+</ol>
+<p>L’Université Laval étant abonnée à un service de détection de plagiat, il est possible que l’enseignant soumette vos travaux pour analyse.</p>
 </section><section id="étudiants-ayant-une-situation-de-handicap-liée-à-une-limitation-fonctionnelle" class="level2"><h2 class="anchored" data-anchor-id="étudiants-ayant-une-situation-de-handicap-liée-à-une-limitation-fonctionnelle">Étudiants ayant une situation de handicap liée à une limitation fonctionnelle</h2>
+<p>Afin de bénéficier de mesures d’accommodement pour les cours ou les examens, un rendez-vous avec une conseillère ou un conseiller du Centre d’aide aux étudiants travaillant en Accueil et soutien aux étudiants en situation de handicap (ACSESH) est nécessaire. Pour ce faire, les étudiants présentant une situation de handicap liée à une limitation fonctionnelle permanente doivent visiter le site “<a href="https://monportail.ulaval.ca/accommodement">Accommodement</a>” et prendre un rendez-vous, le plus tôt possible.</p>
+<p>Au cours de la semaine qui suit l’autorisation des mesures, leur activation doit être effectuée dans “<a href="https://monportail.ulaval.ca/accommodement">Accommodement</a>” pour assurer leur mise en place.</p>
+<p>Les étudiants ayant déjà obtenu des mesures d’accommodements scolaires doivent procéder à l’activation de leurs mesures pour les cours et/ou les examens dans “<a href="https://monportail.ulaval.ca/accommodement">Accommodement</a>” afin que celles-ci puissent être mises en place. Il est à noter que l’activation doit s’effectuer au cours de deux premières semaines de cours.</p>
+<p>Les étudiants concernés recevront par la suite des facultés et départements responsables de leurs cours les informations détaillées sur les modalités permettant d’appliquer les mesures d’accommodement identifiées.</p>
 
 
 </section></main><!-- /main --><script>
@@ -1138,13 +1166,13 @@ window.onload = function() {
     }
   });
   </script><nav class="page-navigation"><div class="nav-page nav-page-previous">
-      <a href="../informations/description.html" class="pagination-link" aria-label="Description">
-        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text">Description</span>
+      <a href="../informations/schedule.html" class="pagination-link" aria-label="Plan">
+        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text">Plan</span>
       </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="../contents/01-introduction.html" class="pagination-link" aria-label="01 - Introduction">
-        <span class="nav-page-text">01 - Introduction</span> <i class="bi bi-arrow-right-short"></i>
+      <a href="../informations/materials.html" class="pagination-link" aria-label="Matériel">
+        <span class="nav-page-text">Matériel</span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
