deploy: 92b13a892976515e36988f6a4c88ea2ed3b60996

--- a/informations/evaluations.html
+++ b/informations/evaluations.html
@@ -22,7 +22,7 @@ ul.task-list li input[type="checkbox"] {
 }
 </style>
 <script src="../site_libs/quarto-nav/quarto-nav.js"></script><script src="../site_libs/clipboard/clipboard.min.js"></script><script src="../site_libs/quarto-search/autocomplete.umd.js"></script><script src="../site_libs/quarto-search/fuse.min.js"></script><script src="../site_libs/quarto-search/quarto-search.js"></script><meta name="quarto:offset" content="../">
-<link href="../informations/materials.html" rel="next">
+<link href="../informations/mcq.html" rel="next">
 <link href="../informations/schedule.html" rel="prev">
 <script src="../site_libs/quarto-html/quarto.js" type="module"></script><script src="../site_libs/quarto-html/tabsets/tabsets.js" type="module"></script><script src="../site_libs/quarto-html/popper.min.js"></script><script src="../site_libs/quarto-html/tippy.umd.min.js"></script><script src="../site_libs/quarto-html/anchor.min.js"></script><link href="../site_libs/quarto-html/tippy.css" rel="stylesheet">
 <link href="../site_libs/quarto-html/quarto-syntax-highlighting-0815c480559380816a4d1ea211a47e91.css" rel="stylesheet" class="quarto-color-scheme" id="quarto-text-highlighting-styles">
@@ -232,7 +232,7 @@ ul.task-list li input[type="checkbox"] {
       </button>
         <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb">
 <li class="breadcrumb-item"><a href="../informations/general.html">Informations</a></li>
-<li class="breadcrumb-item"><a href="../informations/evaluations.html">Evaluations</a></li>
+<li class="breadcrumb-item"><a href="../informations/evaluations.html">Évaluations</a></li>
 </ol></nav><a class="flex-grow-1" role="navigation" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Basculer la barre latérale" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
         </a>
       <button type="button" class="btn quarto-search-button" aria-label="Recherche" onclick="window.quartoOpenSearch();">
@@ -286,11 +286,22 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Plan</span></a>
   </div>
 </li>
-          <li class="sidebar-item">
+          <li class="sidebar-item sidebar-item-section">
+      <div class="sidebar-item-container"> 
+            <a href="../informations/evaluations.html" class="sidebar-item-text sidebar-link active">
+ <span class="menu-text">Évaluations</span></a>
+          <a class="sidebar-item-toggle text-start" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-2" role="navigation" aria-expanded="true" aria-label="Basculer la section">
+            <i class="bi bi-chevron-right ms-2"></i>
+          </a> 
+      </div>
+      <ul id="quarto-sidebar-section-2" class="collapse list-unstyled sidebar-section depth2 show">
+<li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../informations/evaluations.html" class="sidebar-item-text sidebar-link active">
- <span class="menu-text">Evaluations</span></a>
+  <a href="../informations/mcq.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">QCM</span></a>
   </div>
+</li>
+      </ul>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
@@ -302,13 +313,13 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a class="sidebar-item-text sidebar-link text-start collapsed" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-2" role="navigation" aria-expanded="false">
+            <a class="sidebar-item-text sidebar-link text-start collapsed" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-3" role="navigation" aria-expanded="false">
  <span class="menu-text">Modules</span></a>
-          <a class="sidebar-item-toggle text-start collapsed" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-2" role="navigation" aria-expanded="false" aria-label="Basculer la section">
+          <a class="sidebar-item-toggle text-start collapsed" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-3" role="navigation" aria-expanded="false" aria-label="Basculer la section">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
       </div>
-      <ul id="quarto-sidebar-section-2" class="collapse list-unstyled sidebar-section depth1 ">
+      <ul id="quarto-sidebar-section-3" class="collapse list-unstyled sidebar-section depth1 ">
 <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="../contents/01-introduction.html" class="sidebar-item-text sidebar-link">
@@ -359,7 +370,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- main -->
 <main class="content" id="quarto-document-content"><header id="title-block-header" class="quarto-title-block default"><nav class="quarto-page-breadcrumbs quarto-title-breadcrumbs d-none d-lg-block" aria-label="breadcrumb"><ol class="breadcrumb">
 <li class="breadcrumb-item"><a href="../informations/general.html">Informations</a></li>
-<li class="breadcrumb-item"><a href="../informations/evaluations.html">Evaluations</a></li>
+<li class="breadcrumb-item"><a href="../informations/evaluations.html">Évaluations</a></li>
 </ol></nav><div class="quarto-title">
 <h1 class="title">Évaluations</h1>
 </div>
@@ -415,6 +426,7 @@ Identification. Lors d’un examen, une carte d’identité avec photo admissibl
 <p>Remise de l’évaluation:</p>
 <p>Directives de l’évaluation: Tout le contenu du cours est susceptible d’être a l’examen.</p>
 <p>Matériel autorisé: pas de restriction.</p>
+<p>Inforamation supplementaire: <a href="../informations/mcq.html">lien</a></p>
 </section><section id="examen-2" class="level3"><h3 class="anchored" data-anchor-id="examen-2">Examen 2</h3>
 <p>Date et lieu:</p>
 <p>Mode de travail: Individuel</p>
@@ -1171,8 +1183,8 @@ window.onload = function() {
       </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="../informations/materials.html" class="pagination-link" aria-label="Matériel">
-        <span class="nav-page-text">Matériel</span> <i class="bi bi-arrow-right-short"></i>
+      <a href="../informations/mcq.html" class="pagination-link" aria-label="QCM">
+        <span class="nav-page-text">QCM</span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
