--- a/informations/schedule.html
+++ b/informations/schedule.html
@@ -286,11 +286,22 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Plan</span></a>
   </div>
 </li>
-          <li class="sidebar-item">
+          <li class="sidebar-item sidebar-item-section">
+      <div class="sidebar-item-container"> 
+            <a href="../informations/evaluations.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Évaluations</span></a>
+          <a class="sidebar-item-toggle text-start collapsed" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-2" role="navigation" aria-expanded="false" aria-label="Basculer la section">
+            <i class="bi bi-chevron-right ms-2"></i>
+          </a> 
+      </div>
+      <ul id="quarto-sidebar-section-2" class="collapse list-unstyled sidebar-section depth2 ">
+<li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../informations/evaluations.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">Evaluations</span></a>
+  <a href="../informations/mcq.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">QCM</span></a>
   </div>
+</li>
+      </ul>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
@@ -302,13 +313,13 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item sidebar-item-section">
       <div class="sidebar-item-container"> 
-            <a class="sidebar-item-text sidebar-link text-start collapsed" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-2" role="navigation" aria-expanded="false">
+            <a class="sidebar-item-text sidebar-link text-start collapsed" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-3" role="navigation" aria-expanded="false">
  <span class="menu-text">Modules</span></a>
-          <a class="sidebar-item-toggle text-start collapsed" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-2" role="navigation" aria-expanded="false" aria-label="Basculer la section">
+          <a class="sidebar-item-toggle text-start collapsed" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar-section-3" role="navigation" aria-expanded="false" aria-label="Basculer la section">
             <i class="bi bi-chevron-right ms-2"></i>
           </a> 
       </div>
-      <ul id="quarto-sidebar-section-2" class="collapse list-unstyled sidebar-section depth1 ">
+      <ul id="quarto-sidebar-section-3" class="collapse list-unstyled sidebar-section depth1 ">
 <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="../contents/01-introduction.html" class="sidebar-item-text sidebar-link">
@@ -990,8 +1001,8 @@ window.onload = function() {
       </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="../informations/evaluations.html" class="pagination-link" aria-label="Evaluations">
-        <span class="nav-page-text">Evaluations</span> <i class="bi bi-arrow-right-short"></i>
+      <a href="../informations/evaluations.html" class="pagination-link" aria-label="Évaluations">
+        <span class="nav-page-text">Évaluations</span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
