--- a/slides/title-slide.html
+++ b/slides/title-slide.html
@@ -35,4 +35,11 @@ $endfor$
 $if(date)$
   <p class="date">$date$</p>
 $endif$
+$if(title-logo)$
+  <figure>
+    <center>
+      <img src="$title-logo$" alt="logo" width="40%">
+    </center>
+  </figure>
+$endif$
 </section>
